welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:22: error: type mismatch;
 found   : Unit
 required: Boolean
				if (getCouleurSol() != Color.green){
                                ^SlugTracking:17: error: type mismatch;
 found   : Unit
 required: Boolean
			if (getCouleurSol() != Color.green){
                        ^