welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
       

 

	
def isFacingTrail():Boolean = {
	avance()
	if (estFaceMur()){
		return false
	}else{
		if (getCouleurSol() != Color.green){
			recule()
			gauche()
			avance()
			return true
			if (getCouleurSol() != Color.green){
				recule()
				gauche()
				avance()
				return true
				if (getCouleurSol() != Color.green){
					retourne()
					avance()
					avance()
					return true
				}
			}
		} else{
			recule()
			return true
		}
   
	}
} 


	

